--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Global */
 html, body {
     margin: 0;
     padding: 0;
@@ -33,7 +34,6 @@ html, body {
     background-color: #e1e1e1;
     padding: 10px;
     position: absolute;
-    top: 0;
     overflow-y: auto;
 }
 
